2005-10-21  Andrew Cagney  <cagney@redhat.com>

	* TestClone.java: Replace .testClone with .testTaskCloneObserver,
	and .testBlockingTaskClonedObserver.
	* TaskState.java: Add new state .blocked.  Add methods
	.processRequestUnblocked, .processRequestAddObserver, and
	.processRequestDeleteObserver.
	* Task.java: Add methods .requestUnblock, .requestAddObserver,
	.requestDeleteObserver, and .notifyCloned.  Add local fields
	.observers, and .blockers.
	* TaskObserver.java: New file.

2005-10-18  Jeff Johnston  <jjohnstn@redhat.com>

	* TestModify.java: New platform-independent test that
	verifies memory modification.

2005-10-11  Andrew Cagney  <cagney@redhat.com>

	* LinuxTask.java: Use .performZombied.
	* TaskState.java: Handle .performZombied, .performSyscalled,
	.performExited, .performTerminated, and .performExeced, instead of
	TaskEvent .Zombied, .Syscall, .Terminated, .Exited, and .Execed.
	* Task.java: Add .performZombied, .performSyscalled,
	.performExited, .performTerminated, and .performExeced.
	* LinuxHost.java: Use Task .performZombied, .performSyscalled,
	.performExited, .performTerminated, and .performExeced.
	* TaskEvent.java: Simplify .Zombied, .Syscall, .Exited,
	.Terminated, and .Execed.
	
	* TaskState.java: Handle .performExiting, instead of TaskEvent
	.Exiting.
	* TaskEvent.java: Simplify .Exiting.
	* Task.java: Add .performExiting.
	* LinuxHost.java: Use Task .performExiting.
	
	* TaskState.java: Handle .processPerformedCloned,
	.processPerformedTrapped, and .processPerformedSignaled, instead
	of TaskEvent .Stopped, .Trapped, and .Signaled.
	* Task.java: Add .performSignaled, .performStopped, and
	.performTrapped.
	* LinuxHost.java: Use Task .performStopped, .performTrapped, and
	.performSignaled.
	* TaskEvent.java: Simplify .Stopped, .Trapped and .Signaled.

	* TaskState.java: Handle processPerformForked, instead of
	TaskEvent .Forked.
	* ProcState.java: Delete code handling ProcEvent.TaskForked.
	* ProcEvent.java: Delete TaskForked.